# PingPongRobot

./: .dockerignore  .gitignore  LICENCE  README.md  docker-compose.yml  dockerfile  requirements.txt  ubuntutest
data/: sample.md
docs/: PingPongRobot_Requirements.md  command_list.md  folder_structure.md  hardware_spec.md  sample.md  setup.md  tejyun.md
src/: age_estimator  face_detector.py  hello_world.py  image_publisher.py  image_test.py  image_viewer.py  person_detector.py  sample.md
src/cpp_pingpong/: CMakeLists.txt  package.xml
src/cpp_pingpong/config/: params.yaml
src/cpp_pingpong/launch/: pingpong.launch.py
src/cpp_pingpong/src/: ballistics.cpp  controller.cpp  vision_processor.cpp
src/face_age_estimation/: package.xml  setup.cfg  setup.py
src/face_age_estimation/face_age_estimation/: age_estimation.py  image_publisher.py
src/pingpong/: package.xml  setup.cfg  setup.py
src/pingpong/launch/: pingpong.launch.py
src/pingpong/pingpong/: age_estimation.py  ball_detection.py  controller.py  image_publisher.py  motor_controller.py  sample_image_subscriber.py  serve_calculator.py  serve_dynamics.py  (+3 more)
src/pingpong_msgs/: CMakeLists.txt  package.xml
src/py_pingpong/: package.xml  setup.cfg  setup.py
standalone/: aruco_table_detector.py  batch_age_estimation.py  batch_human_detector.py  calc_serve copy.py  calc_serve.py  controller.py  detect_ball copy.py  detect_ball.py  face_attribute_estimation.py  gui.py  human_detector.py  make_aruco.py  person_detection.py  person_detection_age.py  person_fast.py  person_super_fast.py  precision_serve_dynamics copy.py  precision_serve_dynamics.py  sample.md  serve_dynamics.py  serve_dynamics_fast.py  simple_serve_dynamics copy.py  simple_serve_dynamics.py  simu_fire copy.py  simu_fire.py  skeleton_detector.py  track_ping_pong_ball.py
standalone/cpp/: CMakeLists.txt  age.cpp  pose.cpp
(+17 files in other folders)
